--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^14.14.10",
     "@types/pino": "^6.3.4",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
     "nodemon": "^2.0.6",
     "pino": "^6.7.0",
     "ts-node": "^9.1.0",
